--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@
                 <div class="intro-blob blob-b"></div>
                 <div class="intro-pill">
                     🌱
-                    <span data-i18n="introPill">Telangana Scheme Finder</span>
+                    <span data-i18n="introPill">Farming Scheme Finder</span>
                 </div>
                 <h1 class="intro-h1"><i>Agri</i> Setu</h1>
                 <p>                                    </p>
