--- a/index.html
+++ b/index.html
@@ -1024,8 +1024,8 @@
                     🌱
                     <span data-i18n="introPill">Farming Scheme Finder</span>
                 </div>
-                <h1 class="intro-h1"><i>Agri</i> Setu</h1>
-                <p>                                    </p>
+                <h1 class="intro-h1"><i>Agri</i> Setu</h1><br>
+                <p>                                    </p><br>
                 <p class="intro-sub" data-i18n="introSub">
                     Connecting Telangana Farmers to the Right Government Schemes
                 </p>
