--- a/index.html
+++ b/index.html
@@ -1726,7 +1726,7 @@
                         "₹5,000 per acre per season investment support.",
                     location: "Telangana",
                     crop: "all",
-                    max_land: null,
+                    max_land: 10,
                     eligibility: "All land\u2011owning farmers in Telangana.",
                     documents: [
                         "Aadhaar Card",
